# CountdownNumbers

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  configure
src/: ArgUtils.cpp  ArgUtils.h  CMakeLists.txt  Element.cpp  Element.h  ElementHelpers.cpp  ElementHelpers.h  RpnUtils.cpp  RpnUtils.h  Solver.cpp  Solver.h  StatsUtils.cpp  StatsUtils.h  StatsUtils.tcc  main.cpp
test/: ArgUtilsTests.cpp  CMakeLists.txt  ElementHelpersTests.cpp  ElementTests.cpp  RpnUtilsTests.cpp  SolverTests.cpp  SolverTestsValues.h  StatsUtilsTests.cpp  StatsUtilsTestsValues.h
